Added panning and zooming on the canvas grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="gridDiv">
-        <canvas id="gameGrid" , width="600" , height="600"></canvas>
+        <canvas id="gameGrid" , width="600" , height="600" style="background-color: black;"></canvas>
     </div>
 
     <div id="controlsDiv">
