Started development for supporting a full-screen canvas

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div id="gridDiv">
-        <canvas id="gameGrid" , width="600" , height="600" style="background-color: black;"></canvas>
+        <canvas id="gameGrid", style="background-color: black;"></canvas>
     </div>
 
-    <div id="controlsDiv">
+    <!-- <div id="controlsDiv">
         <div>
             <label for="gridSize">Grid Size</label>
             <input type="range" id="gridSizeSlider" name="gridSize" min="3" max="100" value="30">
@@ -27,7 +27,7 @@
         <div>
             <button id="autoTickButton" , class="controlsButton">Start Auto Tick</button>
         </div>
-    </div>
+    </div> -->
 
     <script src="app.js"></script>
 </body>
